tp4-deployment-app/cicd/config/base/service.yaml
apiVersion: v1 
kind: Service
metadata:
  labels:
    app: app-eazytraining-httpd
  name: svc-eazytraining-httpd
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-eazytraining-httpd
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
