tp4-deployment-app/cicd/config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-eazytraining-httpd
  name: route-eazytraining-httpd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: svc-eazytraining-httpd
    weight: 100
  wildcardPolicy: None
